# davcli

./: .gitignore  Changelog  MANIFEST.in  README.md  TODO.md  pyproject.toml  setup.py
contrib/: swtrac_download.sh
davcli/: __init__.py  __main__.py  client.py  download.py  mirror.py
